# package-python-template

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
tests/: test_ok.py
