[tool.poetry]
name = "template"
version = "0.1.0"
description = "template"
authors = ["Julio Martinez del Pino <juliomdp92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
coverage = { extras = ["toml"], version = "7.4.*" }
black = { version = "23.12.*", allow-prereleases = true }
pytest = "7.4.*"
pytest-html = "4.1.*"
pytest-cov = "4.1.*"
pylint = "3.0.*"
python-decouple = "3.8"
mkdocs = "1.5.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
